Fixed scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,6 @@ textarea {
 
 html,
 body {
-  height: 100%;
   margin: 0;
 }
 hr {
